<resources>
    <string name="app_name">Printer</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="start_order">开始下单</string>
    <string name="edit_client_num">输入客户编号</string>
    <string name="test_id">10001</string>
    <string name="id">编号：</string>
    <string name="unit">单元：</string>
    <string name="floor">楼层：</string>
    <string name="room">房间：</string>
    <string name="note_printer">备注（打印）</string>
    <string name="note_no_printer">备注（不打印）</string>
    <string name="test_name">张三</string>
    <string name="test_phone">10008011111111</string>
    <string name="test_address">CQUPT,Nanan,Chongqing,China</string>
    <string name="edit_food_num">请输入菜品编号</string>
    <string name="test_txt_num">1</string>
    <string name="test_price">$3.99</string>
    <string name="test_gre_food_name">Braised chicken with rice</string>
    <string name="test_cn_food_name">黄焖鸡米饭</string>
    <string name="printer">出单</string>
    <string name="my_app_name">Printer</string>
    <string name="new_and_select_label">新建或选择标签</string>
    <string name="no_connect_blue_tooth">未连接蓝牙</string>
    <string name="new_label">新建标签</string>
    <string name="print_label">打印标签</string>
    <string name="fast_label">快速打印</string>
    <string name="label_mode">标签模板</string>
    <string name="label">标签</string>
    <string name="insert">插入</string>
    <string name="attribute">属性</string>
    <string name="content">内容</string>
    <string name="back">返回</string>
    <string name="printf_blue_list">打印机列表</string>
    <string name="template_list">模板列表</string>
    <string name="printf_blue_list_search">搜索</string>
    <string name="printf_blue_list_stop">停止</string>
    <string name="main_title">Print</string>
    <string name="label_attribute">标签属性</string>
    <string name="data_content">数据内容</string>
    <string name="label_name">标签名称</string>
    <string name="label_w">标签宽度</string>
    <string name="label_h">标签高度</string>
    <string name="label_interval">标签间隔</string>
    <string name="label_printf_direction">打印方向</string>
    <string name="data_type">数据类型</string>
    <string name="label_paper_interval">纸张间隔</string>
    <string name="label_paper_consecutively">连续纸</string>
    <string name="label_paper_location_hole">定位孔</string>
    <string name="label_paper_clearance_paper">间隙纸</string>
    <string name="label_paper_black">黑标致</string>
    <string name="interval_length">间隔长度</string>
    <string name="picture">图片</string>
    <string name="background_picture">背景图片</string>
    <string name="picture_name">图片名称</string>
    <string name="no_picture">没有绑定背景图片</string>
    <string name="select_picture">选择图片</string>
    <string name="clear_picture">清楚背景</string>
    <string name="printf_migration">左右边距</string>
    <string name="left_distance">左边距</string>
    <string name="right_distance">右边距</string>
    <string name="no">无</string>
    <string name="manual_input">手工输入</string>
    <string name="gradient_of_data">递变数据</string>
    <string name="current_content">当前内容</string>
    <string name="pass_the_variable">递变量</string>
    <string name="word_space">字间距</string>
    <string name="gradient_of_the_number">递变数量</string>
    <string name="horizontal_center">水平位置居中</string>
    <string name="vertical_center">垂直位置居中</string>
    <string name="rotation_angle">旋转角度</string>
    <string name="qr_code">二维码</string>
    <string name="qc_code">一维码</string>
    <string name="typeface">字体</string>
    <string name="error_correction_level">纠错级别</string>
    <string name="text_position">文字位置</string>
    <string name="no_text">无文字</string>
    <string name="low">低</string>
    <string name="medium">中</string>
    <string name="height">高</string>
    <string name="strong">强</string>
    <string name="cancel">取消</string>
    <string name="determine">确定</string>
    <string name="please_improve_the_parameters">请完善参数！</string>
    <string name="set_label_content">范围：1 - 1000,单位：毫米</string>
    <string name="company_mm">单位：毫米</string>
    <string name="abnormal_data">数据异常</string>
    <string name="please_enter_content">请输入内容</string>
    <string name="current_single">当前为单选模式</string>
    <string name="current_more">当前为多选模式</string>
    <string name="single">单选</string>
    <string name="more">多选</string>
    <string name="position_size">位置大小</string>
    <string name="position_left">位置-左</string>
    <string name="position_top">位置-上</string>
    <string name="position_w">位置-宽</string>
    <string name="position_h">位置-高</string>
    <string name="horizontal_position">水平位置</string>
    <string name="vertical_position">垂直位置</string>
    <string name="barcode_above">条码上方</string>
    <string name="barcode_below">条码下方</string>
    <string name="typeface_name">字体名称</string>
    <string name="bar_code">条形码</string>
    <string name="typeface_size">字体大小</string>
    <string name="align_text">文本对齐</string>
    <string name="center">居中</string>
    <string name="left_center">居左</string>
    <string name="right_center">居右</string>
    <string name="stretching">拉伸</string>
    <string name="size">大小</string>
    <string name="font_too_small">字体太小</string>
    <string name="connection_success">连接成功</string>
    <string name="connection_fail">连接失败</string>
    <string name="connection_close">连接关闭</string>
    <string name="text">文本</string>
    <string name="one_double">1.0倍</string>
    <string name="one_tow_double">1.2倍</string>
    <string name="one_five_double">1.5倍</string>
    <string name="tow_double">2.0倍</string>
    <string name="custom">自定义</string>
    <string name="row_spacing">行间距</string>
    <string name="save_mistake">保存出错</string>
    <string name="save_success">保存成功</string>
    <string name="do_you_need_to_keep_it">是否需要保存？</string>
    <string name="prompt">提示</string>
    <string name="again_reflection">再想想</string>
    <string name="save">保存</string>
    <string name="no_save">不保存</string>
    <string name="data_error">数据出错</string>
    <string name="please_input_name">请输入名称</string>
    <string name="name">名称</string>
    <string name="link">线条</string>
    <string name="newly_build">新建</string>
    <string name="rectangle">矩形</string>
    <string name="table">表格</string>
    <string name="data">日期</string>
    <string name="open">打开</string>
    <string name="as_save">另存为</string>
    <string name="copy">拷贝</string>
    <string name="lock">锁定</string>
    <string name="printf">打印</string>
    <string name="upload">上传</string>
    <string name="line">线条</string>
    <string name="line_w">线宽</string>
    <string name="line_h">线高</string>
    <string name="please_connect_bluetooth">请先连接蓝牙！</string>
    <string name="print_number">打印张数</string>
    <string name="please_input_print_number">请输入您要打印的张数</string>
    <string name="print_now">正在打印...请稍候</string>
    <string name="connect_now">正在连接...</string>
    <string name="bluetooth_disconnect">蓝牙连接已经断开</string>
    <string name="bluetooth_close">蓝牙已经关闭</string>
    <string name="system_template">系统模板</string>
    <string name="own_save_template">保存的模板</string>
    <string name="line_position">线条方向</string>
    <string name="vertical">竖直</string>
    <string name="horizontal">水平</string>
    <string name="start_search">正在搜索...</string>
    <string name="stop_search">搜索完毕</string>
    <string name="permissions_are_rejected">需要开启权限后才能使用“保存”,“另存为”功能</string>
    <string name="to_set_up">去设置</string>
    <string name="permissions_are_rejected_bluetooth">需要开启权限后才能使用蓝牙扫描功能</string>
    <string name="delete_file_prompt">删除模板之后不可回复！</string>
    <string name="already_paired">已配对</string>
    <string name="unpaired">未配对</string>
    <string name="nearby_bluetooth">附近的蓝牙</string>
    <string name="current_printer">当前打印机</string>
    <string name="modify">修改</string>
    <string name="address">地址</string>
    <string name="name_colon">名称：</string>
    <string name="address_colon">地址：</string>
    <string name="bluetooth_is_being_connected">蓝牙正在连接，请稍候...</string>
    <string name="bluetooth_name">蓝牙名称</string>
    <string name="please_input_bluetooth_name">请输入蓝牙名称</string>
    <string name="setting">设置</string>
    <string name="multilingual">多语言</string>
    <string name="current_version">当前版本</string>
    <string name="please_select_language">请输入您选择的语言？</string>
    <string name="please_select_folder">请选择您另存为的文件夹</string>
    <string name="chinese">中文</string>
    <string name="english">英文</string>
    <string name="traditional_chinese">繁体中文</string>
    <string name="japanese">日语</string>
    <string name="korean">韩语</string>
    <string name="spanish">西班牙语</string>
    <string name="french">法语</string>
    <string name="coming_soon">敬请期待</string>
    <string name="printer_professional_manufacturer">打印机专业制造商</string>
    <string name="chang_languge_pro">更换语言将重启应用！</string>
    <string name="default_">默认</string>
    <string name="edit_the_picture">是否要剪辑图片？</string>
    <string name="to_cut">要剪辑</string>
    <string name="do_not_cut">不要剪辑</string>
    <string name="save_now">正在保存...请稍候</string>
    <string name="load_now">正在加载...请稍候</string>
    <string name="delete">删除</string>
    <string name="threshold">阈值</string>
    <string name="two_value_pro">默认：128，范围：0 - 255。此参数如果您并不了解,建议不要调整！</string>
    <string name="printf_concentration">阈值</string>
    <string name="un_lock">解锁</string>
    <string name="add_bitmap_compress">添加图片时压缩</string>
    <string name="serialize">序列化</string>
    <string name="serialize_type">序列化</string>
    <string name="change">递变</string>
    <string name="file">文件</string>
    <string name="select_file">选择文件</string>
    <string name="current_file_number">当前条目数量：</string>
    <string name="please_input">请输入</string>
    <string name="content_no_serialize">内容不能递变，请输入纯数字</string>
    <string name="please_select_printf_type">请选择打印方式</string>
    <string name="ordinary_printf">普通打印</string>
    <string name="serialize_printf">序列化打印</string>
    <string name="select_file_error">选择文件数据错误</string>
    <string name="print_now_NO">正在打印第</string>
    <string name="zhang">张</string>
    <string name="printf_finish">打印完毕</string>
    <string name="printf_error_check">打印出错，请检查打印机是否断开</string>
    <string name="cancel_new">正在取消</string>
    <string name="cancel_printf">取消打印</string>
    <string name="paper_setting">纸张设置</string>
    <string name="total_paper">全部纸张：</string>
    <string name="surplus_paper">剩余纸张：</string>
    <string name="surplus_paper_no">剩余纸张</string>
    <string name="already_printf_paper">打印纸张：</string>
    <string name="please_total_paper">请输入您的纸张数</string>
    <string name="setting_paper_pro">提示：点击确定将会根据您的设置重新计算</string>
    <string name="label_no_content">标签无内容</string>
    <string name="time_format">yyyy-MM-dd HH:mm</string>
    <string name="printf_type">打印方式：</string>
    <string name="print_number_colon">打印张数：</string>
    <string name="content_to_long">内容太长</string>
    <string name="chang_bluetooth_name_success">更换蓝牙名称成功,重启打印机后生效</string>
    <string name="chang_bluetooth_name_fail">更换蓝牙名称失败，您可重启打印机后再试试</string>
    <string name="chang_bluetooth_name_now">正在更换蓝牙名称...请稍候</string>
    <string name="food_num">份数：</string>
    <string name="print_kitchen">打印厨房单</string>
    <string name="print_check">打印账单</string>
</resources>
