<?xml version="1.0" encoding="utf-8"?><!--<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"--><!--xmlns:app="http://schemas.android.com/apk/res-auto"--><!--android:layout_width="match_parent"--><!--android:layout_height="match_parent"--><!--&gt;-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:id="@+id/root"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:gravity="center_vertical"
            android:text="@string/current_printer"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_blue_list_name"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:text="@string/name_colon" />

        <TextView
            android:id="@+id/tv_blue_list_address"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:text="@string/address_colon" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_blue_list_already_paired"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_blue_list_already_paired"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:background="@mipmap/list_icn_arr_right" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:text="@string/already_paired"
            android:textSize="18sp" />
    </LinearLayout>


    <com.daily.jcy.printer.view.ScrollListView
        android:visibility="gone"
        android:id="@+id/lv_already_blue_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        app:mhv_HeightRatio="0.4" />

    <LinearLayout
        android:id="@+id/ll_blue_list_unpaired"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_blue_list_unpaired"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:background="@mipmap/list_icn_arr_right" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:text="@string/nearby_bluetooth"
            android:textSize="18sp" />
    </LinearLayout>

    <com.daily.jcy.printer.view.ScrollListView
        android:visibility="gone"
        android:id="@+id/lv_blue_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        app:mhv_HeightRatio="0.4" />

</LinearLayout>