<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/item_card_margin_top">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_margin="@dimen/item_card_margin"
        android:translationZ="@dimen/item_card_translation_z"
        app:cardCornerRadius="@dimen/item_card_corner">

        <RelativeLayout
            android:id="@+id/item_layout_food"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingStart="20dp">

            <TextView
                android:id="@+id/item_txt_id_food"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_id"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/txt_client_size" />

            <TextView
                android:id="@+id/item_txt_price_food"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:text="@string/test_price"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/txt_client_size" />

            <TextView
                android:id="@+id/item_txt_cn_name_food"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/item_txt_id_food"
                android:layout_marginTop="10dp"
                android:text="@string/test_cn_food_name"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/txt_client_size" />

            <TextView
                android:id="@+id/item_txt_ger_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/item_txt_cn_name_food"
                android:layout_marginTop="10dp"
                android:text="@string/test_gre_food_name"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/txt_client_size" />

            <TextView
                android:id="@+id/item_txt_count_txt_food"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/item_txt_price_food"
                android:layout_marginTop="5dp"
                android:layout_toStartOf="@id/item_txt_count_food"
                android:text="@string/food_num"
                android:textColor="@color/primary_text"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/item_txt_count_food"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/item_txt_price_food"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:text="0"
                android:textColor="@color/primary_text"
                android:textSize="17sp" />

            <Button
                android:id="@+id/item_btn_sub_food"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_below="@id/item_txt_price_food"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="10dp"
                android:layout_toStartOf="@id/item_btn_add_food"
                android:background="@mipmap/ic_sub" />

            <Button
                android:id="@+id/item_btn_add_food"
                android:layout_width="33dp"
                android:layout_height="33dp"
                android:layout_below="@id/item_txt_price_food"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="10dp"
                android:background="@mipmap/ic_add" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>